# hvideo

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  3566.xlsx  CMakeLists.txt  android.hardware.graphics.composer@2.1-service  build.gradle  database_init.sql  gradle.properties  hdmi_revert_4k30.sh  hsvj_watchdog.sh  init.gradle  license.properties.example  package-lock.json  package.json  restart-vivo-tvcast.ps1  settings.gradle  signing.properties.example
app/src/main/cpp/: CMakeLists.txt  NativeUsbAdbMirrorClient.cpp  NativeUsbAdbMirrorClient.h  jni_interface.cpp
src/audio/: AudioPlayer.cpp  AudioPlayerManager.cpp  AudioProcessor.cpp  CMakeLists.txt
src/capture/: CMakeLists.txt  RgaConverter.cpp  RgaConverter.h  UsbCapture.cpp  V4L2Capture.cpp  V4L2SubdevQuery.cpp  VpssConverter.cpp  VpssConverter.h  pthread_stub.c
src/command/: CMakeLists.txt
src/core/: CMakeLists.txt  CommandRouter.cpp  CommandRouter_Hint.cpp  CommandRouter_LayerManagement.cpp  CommandRouter_LayerRender.cpp  CommandRouter_Lyric.cpp  CommandRouter_Peripheral.cpp  CommandRouter_Playlist.cpp  CommandRouter_RegionConfig.cpp  CommandRouter_Scene.cpp  CommandRouter_Sync.cpp  CommandRouter_System.cpp  CommandRouter_Utils.cpp  CommandRouter_VideoPlayback.cpp  Engine.cpp  Engine_Init.cpp  Engine_Playlist.cpp  Engine_Render.cpp  Engine_Update.cpp  LayerDefinitions.cpp  LicenseManager.cpp  LicenseVerify.cpp  Mubu.cpp  PathConfig.cpp  PeripheralManager.cpp  SceneManager.cpp  SystemConfig.cpp
src/database/: CMakeLists.txt  MaterialIndex.cpp  PlaylistDatabase.cpp  PlaylistDatabase_Create.cpp  PlaylistDatabase_Query.cpp  PlaylistDatabase_State.cpp  PlaylistDatabase_Update.cpp  PlaylistManager.cpp  VodDatabase.cpp  VodDatabase_Queue.cpp
src/decoder/: AudioOnlyPlayer.cpp  CMakeLists.txt  RkmppMpeg2Probe.cpp  UsbH264RkmppDecoder.cpp  VideoDecoder.cpp  VideoDecoderPool.cpp
src/decoder/core/: DecoderCore.cpp  DecoderCore_Decode.cpp  DecoderCore_OpenClose.cpp  HardwareManager.cpp
src/decoder/error/: ErrorHandler.cpp
src/decoder/frame/: DecodedFrame.cpp  FramePool.cpp
src/decoder/state/: PlaybackStateMachine.cpp
src/decoder/sync/: FrameSyncManager.cpp
src/effect/: AudioReactiveEngine.cpp  CMakeLists.txt  CNNDrumDetector.cpp  CNNDrumWeights.cpp  EffectManager.cpp  MelFilterbank.cpp
src/fusion/: CMakeLists.txt  FusionCurve.cpp  FusionFileStore.cpp  FusionJson.cpp  FusionManager.cpp
src/layer/: CMakeLists.txt  Layer.cpp  LayerImage.cpp  LayerMirror.cpp  LayerText.cpp  LayerVideo.cpp  LayerVideo_Playback.cpp  LayerVideo_Render.cpp  README.md
src/layer/initializer/: CaptureLayerInitializer.cpp  HintLayerInitializer.cpp  ImageLayerInitializer.cpp  LayerInitializer.cpp  LayerInitializerFactory.cpp  LogoLayerInitializer.cpp  LyricLayerInitializer.cpp  MarqueeLayerInitializer.cpp  MirrorLayerInitializer.cpp  QRCodeLayerInitializer.cpp  TextLayerInitializer.cpp  VideoLayerInitializer.cpp
src/lyric/: ASSRenderer.cpp  CMakeLists.txt  Layer21LibassContext.cpp  LayerText_Layer21.cpp  LyricRenderer.cpp  LyricRenderer_Adjust.cpp  LyricRenderer_Gpu.cpp  README.md  SharedLibassHolder.cpp
src/network/: CMakeLists.txt  CloudLicenseClient.cpp  CloudSyncService.cpp  DeviceDiscoveryService.cpp  Dmx512ChannelHandler.cpp  Dmx512Receiver.cpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpServer_AudioEffect.cpp  HttpServer_Auth.cpp  HttpServer_Command.cpp  HttpServer_Config.cpp  HttpServer_Connection.cpp  HttpServer_Core.cpp  HttpServer_DMX_Routes.cpp  HttpServer_Effect.cpp  HttpServer_Filesystem.cpp  HttpServer_Fusion.cpp  HttpServer_Helpers.cpp  HttpServer_Helpers.h  HttpServer_Internal.h  HttpServer_Layer.cpp  HttpServer_Material.cpp  HttpServer_Playlist.cpp  HttpServer_Runtime.cpp  HttpServer_Scenes.cpp  HttpServer_Stream.cpp  HttpServer_System.cpp  HttpServer_Upload.cpp  HttpServer_VOD.cpp  HttpServer_Video.cpp  NetworkManager.cpp  OnlineVodHttpSyncClient.cpp  OnlineVodWsClient.cpp  PreviewStreamConverter.cpp  PreviewStreamConverter.h  (+7 more)
src/network/web/: index.html  login.html  script.js  style.css
src/network/web/fusion-mobile/: index.html  script.js  style.css
src/network/web/fusion-mobile/modules/: api.js  geometry.js  renderer.js  state.js
src/network/web/libs/: tailwindcss.js
src/network/web/mobile/: index.html  script.js  style.css
src/network/web/modules/components/: buttonGroups.js  dialogs.js  (+1 more)
src/network/web/shared/: apiResponseParser.js  moduleActions.js
src/playcontrol/: CMakeLists.txt  DecoderResourceGate.cpp  LayerPlaybackController.cpp  MediaRuntimeDiagnostics.cpp  PlaybackCoordinator.cpp  PlaybackRequestDispatcher.cpp  PlaybackResult.cpp
src/renderer/: CMakeLists.txt  CaptureRenderer.cpp  CaveProjectionCalculator.cpp  DrmKmsProbe.cpp  ProjectionMatrixCalculator.cpp  RKDRMRenderer.cpp  RegionRotationRenderer.cpp  RegionRotationRenderer_Config.cpp  RegionRotationRenderer_Geometry.cpp  RegionRotationRenderer_Mesh.cpp  RegionRotationRenderer_MeshUpdate.cpp  RegionRotationRenderer_Render.cpp  TexturePool.cpp  UsbCaptureRenderer.cpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer_AssMask.cpp  VulkanRenderer_Device.cpp  VulkanRenderer_DrmKms.cpp  VulkanRenderer_Effect.cpp  VulkanRenderer_Frame.cpp  VulkanRenderer_Internal.h  VulkanRenderer_Kawase.cpp  VulkanRenderer_Pipeline.cpp  VulkanRenderer_PipelineCore.cpp  VulkanRenderer_Render.cpp  VulkanRenderer_Swapchain.cpp  VulkanRenderer_Texture.cpp  VulkanRenderer_extension.cpp
src/text/: CMakeLists.txt  LayerText_Layer40.cpp  LayerText_Layer41.cpp  MessageHintRenderer.cpp  VulkanTextOverlayBridge.cpp
src/utils/: ApngLoader.cpp  CMakeLists.txt  FileUtils.cpp  GenerateVersion.cmake  HttpClient.cpp  JsonUtils.cpp  Logger.cpp  MediaController.cpp  MediaUtils.cpp  MediaUtils.h  MemoryMonitor.cpp  RkmppMjpegDecoder.cpp  SliceConfigJson.cpp  StringUtils.cpp  SystemUtils.cpp  SystemUtils.h  V4L2DeviceDetector.cpp  Version.h.in  VideoTranscoder.cpp
src/vod/: CMakeLists.txt  LocalSongDatabase.cpp  LocalSongFileScanner.cpp  LocalVodDatabase.cpp  LocalVodManager.cpp  LocalVodPlayer.cpp
(+473 files in other folders)
